...
        addSubview(radiusLabel)
        NSLayoutConstraint.activate([
            radiusLabel.topAnchor.constraint(equalTo: margins.topAnchor),
            radiusLabel.bottomAnchor.constraint(equalTo: margins.bottomAnchor),
            ])
        
        radiusField.placeholder = NSLocalizedString("300", comment: "Geofence editor radius field placeholder.")
        radiusField.textAlignment = .right
        radiusField.keyboardType = .numbersAndPunctuation
        radiusField.translatesAutoresizingMaskIntoConstraints = false
        addSubview(radiusField)
        
        radiusUnitLabel.text = NSLocalizedString("m", comment: "Geofence editor radius field unit (metres) label.")
...
